python/testData/highlighting/fStringTerminatedByLineBreakInExpressionBefore312.py
s = f'{1 +<error descr="Python version 3.11 does not allow new lines in expression parts of non-triple-quoted f-strings">
</error>2}'